# fastapi-authservice

./: README.md  pyproject.toml
fastapi_authservice/: __init__.py  authenticators.py  security.py
tests/: test_fastapi_authservice.py
